--- a/package.json
+++ b/package.json
@@ -48,5 +48,7 @@
   "engines": {
     "node": ">=18.14"
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "main": "index.js",
+  "repository": "https://github.com/turnly/turnly.git"
 }
